fix: $CI_REGISTRY_IMAGE/$IMAGE_TAG

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ build:
     - export ENGINE_URL=$(eval echo \$FLAX_${FLAX_VERSION}_URL)
     - export OS_PLATAFORM_URL=$(eval echo \$FLAX_${FLAX_VERSION}_${OS}_URL)
     - export IMAGE_TAG=$(eval echo flax-engine:${FLAX_VERSION}_${OS})
-    - docker build -t $CI_REGISTRY_IMAGE:$IMAGE_TAG --build-arg OS=$OS ENGINE_URL=$ENGINE_URL OS_PLATAFORM_URL=$OS_PLATAFORM_URL .
-    - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker build -t $CI_REGISTRY_IMAGE/$IMAGE_TAG --build-arg OS=$OS ENGINE_URL=$ENGINE_URL OS_PLATAFORM_URL=$OS_PLATAFORM_URL .
+    - docker push $CI_REGISTRY_IMAGE/$IMAGE_TAG
   parallel:
     matrix:
       - OS: [Linux]
