--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,9 @@ build:
   stage: build
   script:
     - export ENGINE_URL=$(eval echo \$FLAX_${FLAX_VERSION}_URL)
+    - echo $ENGINE_URL
     - export OS_PLATAFORM_URL=$(eval echo \$FLAX_${FLAX_VERSION}_${OS}_URL)
+    - echo $OS_PLATAFORM_URL
     - export IMAGE_TAG=$(eval echo flax-engine:${FLAX_VERSION}_${OS})
     - docker build -t $CI_REGISTRY_IMAGE/$IMAGE_TAG --build-arg OS=$OS --build-arg ENGINE_URL=$ENGINE_URL --build-arg OS_PLATAFORM_URL=$OS_PLATAFORM_URL .
     - docker push $CI_REGISTRY_IMAGE/$IMAGE_TAG
