--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 # .env file
 
-# Flax version
-FLAX_VERSION=1_07_06407
+# Download URLs for different Flax version and OSes
 
-# Download URLs for different OSes
+# 1.07.06407.2
 FLAX_1_07_06407_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/FlaxEditorLinux.zip
-FLAX_1_07_06407_LINUXx64_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/Linux.zip
-FLAX_1_07_06407_WINDOWSx64_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/Windows.zip
-FLAX_1_07_06407_MACOS_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/MacOs.zip
+FLAX_1_07_06407_LINUX_AMD64_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/Linux.zip
+FLAX_1_07_06407_WINDOWS_AMD64_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/Windows.zip
+FLAX_1_07_06407_ANDROID_ARM64_URL=https://vps2.flaxengine.com/store/builds/Package_1_07_06407/MacOs.zip
