--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,4 +17,4 @@ build:
     - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG
   parallel:
     matrix:
-      - OS: [LINUXx64]
+      - OS: [LINUX_AMD64]
