--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ services:
 
 before_script:
   # - source .env
-  - apt install python3
+  - python3 --version
+  - apt-get install -y python3
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 build:
