fix: copy the download contents to the image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,24 +4,20 @@ services:
   - docker:20.10.24-dind
 
 before_script:
-  # - source .env
   - apk add python3
-  - python3 --version
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 build:
   stage: build
+  allow_failure:
+      exit_codes: 2
   script:
     - python3 download.py
     - | 
       if [[ ! -d "Binaries" ]]; then
         echo "Binaries folder does not exist. Quitting job."
-        exit 0  # Exit with success code 0 to indicate non-failure
+        exit 2  # Exit with success code 2 to indicate non-failure
       fi
-# ... Continue with job steps if Binaries folder exists ...
-
-    # - export ENGINE_URL=$(eval echo \$FLAX_${FLAX_VERSION}_URL)
-    # - export OS_PLATFORM_URL=$(eval echo \$FLAX_${FLAX_VERSION}_${OS_PLATFORM}_URL)
     - export IMAGE_TAG=$(eval echo ${FLAX_VERSION//_/.}-${OS_PLATFORM})
     - docker build -t $CI_REGISTRY_IMAGE:$IMAGE_TAG --build-arg OS=$OS --build-arg ENGINE_URL=$ENGINE_URL --build-arg OS_PLATFORM_URL=$OS_PLATFORM_URL .
     - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG
