--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,12 +15,14 @@ build:
     - python3 download.py
     - | 
       if [[ ! -d "app" ]]; then
-        echo "app folder does not exist. Quitting job."
+        echo "app folder does not exist. Job failed."
         exit 2  # Exit with success code 2 to indicate non-failure
       fi
-    - export IMAGE_TAG=$(eval echo ${FLAX_VERSION//_/.}-${OS_PLATFORM})
-    - docker build -t $CI_REGISTRY_IMAGE:$IMAGE_TAG --build-arg OS=$OS --build-arg ENGINE_URL=$ENGINE_URL --build-arg OS_PLATFORM_URL=$OS_PLATFORM_URL .
+    - export IMAGE_TAG=${OS_PLATFORM}-$(eval echo ${FLAX_VERSION//_/.})
+    - export IMAGE_TAG_LATEST=${OS_PLATFORM}-latest
+    - docker build -t $CI_REGISTRY_IMAGE:$IMAGE_TAG -t $CI_REGISTRY_IMAGE:$IMAGE_TAG_LATEST --build-arg OS=$OS --build-arg ENGINE_URL=$ENGINE_URL --build-arg OS_PLATFORM_URL=$OS_PLATFORM_URL .
     - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG
+    - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG_LATEST
   parallel:
     matrix:
       - OS_PLATFORM: [
