--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run download the Engine and Platform
         run: python download.py
         env:
-          FLAX_VERSION: ${{ env.FLAX_VERSION }}
+          FLAX_VERSION: ${{ vars.FLAX_VERSION }}
 
       - name: Check for app folder
         run: |
@@ -58,7 +58,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ matrix.OS_PLATFORM }}-${{ env.FLAX_VERSION }}
+            type=raw,value=${{ matrix.OS_PLATFORM }}-${{ vars.FLAX_VERSION }}
             type=raw,value=${{ matrix.OS_PLATFORM }}-latest
 
       - name: Build and push Docker image
@@ -70,4 +70,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             OS=${{ matrix.OS_PLATFORM }}
-            FLAX_VERSION=${{ env.FLAX_VERSION }}
+            FLAX_VERSION=${{ vars.FLAX_VERSION }}
