--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
       matrix:
         OS_PLATFORM: [
             linux_amd64,
-            # windows_amd64,
-            # android_arm64,
-            # xboxone,
-            # windows_store,
+            windows_amd64,
+            android_arm64,
+            xboxone,
+            windows_store,
           ]
 
     steps:
