--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,9 @@ jobs:
           echo ${FLAX_VERSION_FULL}
           echo ${{ env.FLAX_VERSION_FULL }}
 
+      - name: Check for app folder 2
+        run: echo ${FLAX_VERSION_FULL}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
