--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ build:
         exit 2  # Exit with success code 2 to indicate non-failure
       fi
     - echo ${FLAX_VERSION_FULL}
-    - echo ${FLAX_VERSION_FULL//_/.}
+    - echo "$FLAX_VERSION_FULL"
+    - echo "${FLAX_VERSION_FULL}"
     - export IMAGE_TAG_VERSION_FULL=${OS_PLATFORM}-$(eval echo ${FLAX_VERSION_FULL//_/.})
     - export IMAGE_TAG_VERSION=${OS_PLATFORM}-$(eval echo ${FLAX_VERSION//_/.})
     - export IMAGE_TAG_LATEST=${OS_PLATFORM}-latest
