fix: use source to send python env variables to the cicd

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run download the Engine and Platform
-        run: python download.py
+        run: |
+          python download.py
+          source .env
         env:
           FLAX_VERSION: ${{ vars.FLAX_VERSION }}
           OS_PLATFORM: ${{ matrix.OS_PLATFORM }}
@@ -46,9 +48,7 @@ jobs:
       - name: Check for app folder 1
         run:  $FLAX_VERSION_FULL
       - name: Check for app folder 2
-        run: echo ${FLAX_VERSION_FULL} 
-      - name: Check for app folder 3
-        run: echo ${{FLAX_VERSION_FULL}}
+        run: echo ${FLAX_VERSION_FULL}
       - name: Check for app folder 4
         run: echo "$FLAX_VERSION_FULL"
       - name: Check for app folder 5
@@ -71,7 +71,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ matrix.OS_PLATFORM }}-${{ FLAX_VERSION_FULL }}
+            type=raw,value=${{ matrix.OS_PLATFORM }}-$FLAX_VERSION_FULL
             type=raw,value=${{ matrix.OS_PLATFORM }}-${{ vars.FLAX_VERSION }}
             type=raw,value=${{ matrix.OS_PLATFORM }}-latest
 
