--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
         echo "app folder does not exist. Job failed."
         exit 2  # Exit with success code 2 to indicate non-failure
       fi
-    - source .env
+    - source _env
     - export IMAGE_TAG_VERSION_FULL=${OS_PLATFORM}-$FLAX_VERSION_FULL
     - export IMAGE_TAG_VERSION=${OS_PLATFORM}-$(eval echo ${FLAX_VERSION//_/.})
     - export IMAGE_TAG_LATEST=${OS_PLATFORM}-latest
@@ -30,9 +30,10 @@ build:
       --build-arg ENGINE_URL=$ENGINE_URL \
       --build-arg OS_PLATFORM_URL=$OS_PLATFORM_URL .
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG_VERSION_FULL
-    - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG_VERSION
-    - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG_LATEST
+    - |
+      docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG_VERSION_FULL \
+                  $CI_REGISTRY_IMAGE:$IMAGE_TAG_VERSION \
+                  $CI_REGISTRY_IMAGE:$IMAGE_TAG_LATEST
   parallel:
     matrix:
       - OS_PLATFORM: [
