--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,17 +38,6 @@ jobs:
           FLAX_VERSION: ${{ vars.FLAX_VERSION }}
           OS_PLATFORM: ${{ matrix.OS_PLATFORM }}
 
-      - name: Check for app folder 1
-        run: echo $FLAX_VERSION_FULL
-      - name: Check for app folder 2
-        run: echo ${FLAX_VERSION_FULL}
-      - name: Check for app folder 4
-        run: echo "$FLAX_VERSION_FULL"
-      - name: Check for app folder 5
-        run: echo "${FLAX_VERSION_FULL}"
-      - name: Check for app folder 6
-        run: echo ${{ env.FLAX_VERSION_FULL }}
-
       - name: Check for app folder
         run: |
           if [[ ! -d "app" ]]; then
@@ -66,19 +55,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=${{ matrix.OS_PLATFORM }}-${{ env.FLAX_VERSION_FULL }}
-            type=raw,value=${{ matrix.OS_PLATFORM }}-${{ vars.FLAX_VERSION }}
-            type=raw,value=${{ matrix.OS_PLATFORM }}-latest
+      # - name: Extract metadata (tags, labels) for Docker
+      #   id: meta
+      #   uses: docker/metadata-action@v4
+      #   with:
+      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      #     tags: |
+      #       type=raw,value=${{ matrix.OS_PLATFORM }}-${{ env.FLAX_VERSION_FULL }}
+      #       type=raw,value=${{ matrix.OS_PLATFORM }}-${{ vars.FLAX_VERSION }}
+      #       type=raw,value=${{ matrix.OS_PLATFORM }}-latest
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ matrix.OS_PLATFORM }}-${{ env.FLAX_VERSION_FULL }}
+            ${{ matrix.OS_PLATFORM }}-${{ vars.FLAX_VERSION }}
+            ${{ matrix.OS_PLATFORM }}-latest
+          # tags: ${{ steps.meta.outputs.tags }}
